<resources>
    <string name="app_name">CMN Online</string>
    <!--   start tutorial-->
    <string name="tutorial_first_title">Thời gian thẩm định ngắn</string>
    <string name="tutorial_second_title">Hạn mức cao</string>
    <string name="tutorial_last_title">An toàn tuyệt đối</string>

    <string name="tutorial_first_description">mô tả 1</string>
    <string name="tutorial_second_description">mô tả 2</string>
    <string name="tutorial_last_description">mô tả 3</string>

    <string name="skip">Bỏ qua</string>
    <string name="next">Tiếp theo</string>
    <string name="begin">Bắt đầu</string>
    <!--    end tutorial-->

    <!--    start login-->
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_phone">Số điện thoại</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_phone_hint">0903945820</string>
    <string name="login_password_hint">123456</string>
    <string name="login">Đăng nhập</string>
    <string name="login_forgot_password">Quên mật khẩu</string>
    <string name="login_does_not_have_account">Chưa có tài khoản?</string>
    <string name="login_register_now">Đăng ký ngay</string>
    <!--    end login-->

    <!--    start forgot password-->
    <string name="forgot_password_title">QUÊN MẬT KHẨU</string>
    <string name="forgot_password_otp">Mã xác nhận</string>
    <string name="forgot_password_new_password">Nhập mật khẩu</string>
    <string name="forgot_password_confirm_new_password">Nhập lại mật khẩu</string>
    <string name="forgot_password_otp_hint">8888</string>
    <string name="forgot_password_new_password_hint">123456</string>
    <string name="forgot_password_get_otp">Nhận mã</string>
    <string name="forgot_password_reset_password">Gửi</string>
    <string name="forgot_password_invalid_phone">Số điện thoại không hợp lệ. Vui lòng nhập lại</string>
    <string name="forgot_password_invalid_OTP">Mã OTP không hợp lệ. Vui lòng nhập lại</string>
    <string name="forgot_password_not_verified_OTP">Mã OTP không đúng. Vui lòng nhập lại</string>

    <string name="forgot_password_not_same_password">Mật khẩu không được bỏ trống và phải giống nhau</string>
    <string name="forgot_password_change_password_success">Bạn đã đổi mật khẩu thành công. Vui lòng đăng nhập</string>

    <!--    end forgot password-->

    <!--    start home-->
    <string name="navigation_home">Fast88</string>
    <string name="navigation_trade">Giao dịch</string>
    <string name="navigation_personal">Cá nhân</string>

    <string name="personal_order_history">Lịch sử giao dịch</string>
    <string name="personal_coupon">Mã ưu đãi</string>
    <string name="personal_logout">Logout</string>
    <!--    end home-->

    <!--    start payment-->
    <string name="payment_money">Số tiền</string>
    <string name="payment_amount">VND</string>
    <string name="payment_start_date">Ngày bắt đầu</string>
    <string name="payment_due_date">Ngày đáo hạn</string>
    <string name="payment_principle">Principle</string>
    <string name="payment_interest">Interest</string>
    <string name="payment_default_charge">Default charge</string>
    <string name="payment_contract_id">Mã hợp đồng</string>
    <string name="payment_product_type">Loại sản phẩm</string>
    <string name="payment_next">Tiếp tục</string>
    <string name="payment_back_to_home">Back to home</string>
    <string name="payment_title">Thanh toán</string>
    <string name="payment_finish">Hoàn tất</string>
    <!--    end payment-->


    <string name="press_back_again_to_exit">Nhấn Back lần nữa để thoát ứng dụng</string>

</resources>
