<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".feature.login.forgotpassword.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/home_parent_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_parent_margin"
            app:contentPadding="@dimen/home_parent_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_parent_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_phone" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_parent_half_margin"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/login_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_otp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_parent_half_margin"
                    android:animateLayoutChanges="true">

                    <EditText
                        android:id="@+id/edtOTP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/btnGetOTP"
                        android:background="@drawable/background_edittext"
                        android:hint="@string/forgot_password_otp_hint"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/btnGetOTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="@dimen/home_parent_half_margin"
                        android:background="@drawable/background_gradient_orange_button"
                        android:text="@string/forgot_password_get_otp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_new_password" />

                <EditText
                    android:id="@+id/edtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_parent_half_margin"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/forgot_password_new_password_hint"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_confirm_new_password" />

                <EditText
                    android:id="@+id/edtConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_parent_half_margin"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/forgot_password_new_password_hint"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_parent_margin"
            android:layout_marginRight="@dimen/home_parent_margin"
            android:layout_marginBottom="@dimen/home_parent_margin"
            android:background="@drawable/background_gradient_primary_button"
            android:text="@string/forgot_password_reset_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>