<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".feature.tutorial.TutorialActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpTutorialContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottomBar"
        android:padding="@dimen/home_parent_margin" />

    <LinearLayout
        android:id="@+id/llBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/home_parent_half_margin">

        <LinearLayout
            android:id="@+id/llNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_white_button"
                    android:text="@string/skip"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_gradient_primary_button"
                    android:text="@string/next"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnBegin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/home_parent_margin"
            android:layout_marginEnd="@dimen/home_parent_margin"
            android:background="@drawable/background_gradient_primary_button"
            android:text="@string/begin"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>